feat: first version with business requirements and non functional requirements improvements
