# internal/models/payment.go
@@ -1,30 +1,0 @@
-package models
-
-type PostPaymentRequest struct {
-	CardNumberLastFour int    `json:"card_number_last_four"`
-	ExpiryMonth        int    `json:"expiry_month"`
-	ExpiryYear         int    `json:"expiry_year"`
-	Currency           string `json:"currency"`
-	Amount             int    `json:"amount"`
-	Cvv                int    `json:"cvv"`
-}
-
-type PostPaymentResponse struct {
-	Id                 string `json:"id"`
-	PaymentStatus      string `json:"payment_status"`
-	CardNumberLastFour int    `json:"card_number_last_four"`
-	ExpiryMonth        int    `json:"expiry_month"`
-	ExpiryYear         int    `json:"expiry_year"`
-	Currency           string `json:"currency"`
-	Amount             int    `json:"amount"`
-}
-
-type GetPaymentResponse struct {
-	Id                 string `json:"id"`
-	PaymentStatus      string `json:"payment_status"`
-	CardNumberLastFour int    `json:"card_number_last_four"`
-	ExpiryMonth        int    `json:"expiry_month"`
-	ExpiryYear         int    `json:"expiry_year"`
-	Currency           string `json:"currency"`
-	Amount             int    `json:"amount"`
-}
